--- a/.github/workflows/leeyabot.yml
+++ b/.github/workflows/leeyabot.yml
@@ -38,5 +38,6 @@ jobs:
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+         cd scripts/
          cml-publish "diff_plot.png" --md >> OutputDifferences.knit.md
          cml-send-comment OutputDifferences.knit.md
