Change behavior to only return table/graph if output diffs are nonzero
Updated .Rmd with if/else statements
Updated .yml to produce empty file if no graph is created

--- a/.github/workflows/leeyabot.yml
+++ b/.github/workflows/leeyabot.yml
@@ -39,5 +39,6 @@ jobs:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
          cd scripts/
+         touch diff_plot.png
          cml-publish "diff_plot.png" --md >> OutputDifferences.knit.md
          cml-send-comment OutputDifferences.knit.md
