--- a/.github/workflows/leeyabot.yml
+++ b/.github/workflows/leeyabot.yml
@@ -40,5 +40,7 @@ jobs:
         run: |
          cd scripts/
          touch diff_plot.png
-         cml-publish "diff_plot.png" --md >> OutputDifferences.knit.md
+         if [ -f "diff_plot.png" ]; then
+          cml-publish "diff_plot.png" --md >> OutputDifferences.knit.md
+          fi
          cml-send-comment OutputDifferences.knit.md
