--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,35 @@ export(CO2_CONSTRAIN)
 export(CO3_HL)
 export(CO3_LL)
 export(DACCS_UPTAKE)
+export(DELTA_C2F6)
+export(DELTA_CCL4)
+export(DELTA_CF4)
+export(DELTA_CFC11)
+export(DELTA_CFC113)
+export(DELTA_CFC114)
+export(DELTA_CFC115)
+export(DELTA_CFC12)
+export(DELTA_CH3BR)
+export(DELTA_CH3CCL3)
+export(DELTA_CH3CL)
+export(DELTA_CH4)
+export(DELTA_CO2)
+export(DELTA_HALON1211)
+export(DELTA_HALON1301)
+export(DELTA_HALON2402)
+export(DELTA_HCFC141B)
+export(DELTA_HCFC142B)
+export(DELTA_HCFC22)
+export(DELTA_HFC125)
+export(DELTA_HFC134A)
+export(DELTA_HFC143A)
+export(DELTA_HFC227EA)
+export(DELTA_HFC23)
+export(DELTA_HFC245FA)
+export(DELTA_HFC32)
+export(DELTA_HFC4310)
+export(DELTA_N2O)
+export(DELTA_SF6)
 export(DETRITUS_C)
 export(DIC_HL)
 export(DIC_LL)
@@ -62,6 +91,7 @@ export(EMISSIONS_HFC245FA)
 export(EMISSIONS_HFC32)
 export(EMISSIONS_HFC4310)
 export(EMISSIONS_N2O)
+export(EMISSIONS_NH3)
 export(EMISSIONS_NMVOC)
 export(EMISSIONS_NOX)
 export(EMISSIONS_OC)
@@ -103,7 +133,6 @@ export(LL_WARNING)
 export(LUC_EMISSIONS)
 export(N2O_CONSTRAIN)
 export(NATURAL_CH4)
-export(NATURAL_SO2)
 export(NAT_EMISSIONS_N2O)
 export(NBP)
 export(NPP)
@@ -125,6 +154,8 @@ export(PREINDUSTRIAL_CO2)
 export(PREINDUSTRIAL_N2O)
 export(PREINDUSTRIAL_O3)
 export(Q10_RH)
+export(Q_CO2)
+export(RF_ACI)
 export(RF_BC)
 export(RF_C2F6)
 export(RF_CCL4)
@@ -154,17 +185,47 @@ export(RF_HFC23)
 export(RF_HFC245FA)
 export(RF_HFC32)
 export(RF_HFC4310)
+export(RF_MISC)
 export(RF_N2O)
+export(RF_NH3)
 export(RF_O3_TROP)
 export(RF_OC)
 export(RF_SF6)
 export(RF_SO2)
-export(RF_SO2D)
-export(RF_SO2I)
 export(RF_TOTAL)
 export(RF_T_ALBEDO)
 export(RF_VOL)
 export(RH)
+export(RHO_BC)
+export(RHO_C2F6)
+export(RHO_CCL4)
+export(RHO_CF4)
+export(RHO_CFC11)
+export(RHO_CFC113)
+export(RHO_CFC114)
+export(RHO_CFC115)
+export(RHO_CFC12)
+export(RHO_CH3BR)
+export(RHO_CH3CCL3)
+export(RHO_CH3CL)
+export(RHO_HALON1211)
+export(RHO_HALON1301)
+export(RHO_HALON2402)
+export(RHO_HCFC141B)
+export(RHO_HCFC142B)
+export(RHO_HCFC22)
+export(RHO_HFC125)
+export(RHO_HFC134A)
+export(RHO_HFC143A)
+export(RHO_HFC227EA)
+export(RHO_HFC23)
+export(RHO_HFC245FA)
+export(RHO_HFC32)
+export(RHO_HFC4310)
+export(RHO_NH3)
+export(RHO_OC)
+export(RHO_SF6)
+export(RHO_SO2)
 export(SETDATA)
 export(SF6_CONSTRAIN)
 export(SOIL_C)
@@ -179,8 +240,6 @@ export(VEG_C)
 export(VOLCANIC_SCALE)
 export(VOLCANIC_SO2)
 export(WARMINGFACTOR)
-export(Y2000_SO2)
-export(alpha_CO2)
 export(create_biome)
 export(enddate)
 export(fetchvars)
