Update tests for ssp245

--- a/inst/input/hector_ssp245.ini
+++ b/inst/input/hector_ssp245.ini
@@ -64,7 +64,7 @@ luc_emissions=csv:tables/ssp245_emiss-constraints_rf.csv
 
 ; CO2 and temperature effects on the carbon cycle
 ; these are global values, can optionally specify biome-specific ones as above
-beta=0.13     		; from a optimization best fit
+beta=0.36     		; from a optimization best fit
 q10_rh=2.0		; respiration response Q10, unitless
 
 ; Optional biome-specific warming factors
@@ -142,7 +142,9 @@ rho_nh3=-.00208         ; (W yr m–2 NH3Tg–1) IPCC AR6 radiative efficiency N
 
 ; Miscellaneous radiative forcings default set to 0, or read in from a input table, may be used to read in 
 ; additional forcings not modeled by Hector (i.e. solar, bc on snow , contrails from)
-Fmisc=csv:tables/ssp245_emiss-constraints_rf.csv		; 
+;Fmisc=csv:tables/ssp245_emiss-constraints_rf.csv		; 
+Fmisc[1750]=0		                                        ; 
+
 
 
 
