--- a/.github/workflows/rcmd.yml
+++ b/.github/workflows/rcmd.yml
@@ -37,9 +37,9 @@ jobs:
           # test on one version of R for windows
           - {os: windows-latest, r: 'release'}
 
-          # latest stable version of R for ubuntu-16.04 is 3.5; ubuntu-latest is migrating to 20.04 by the end of 2020
-          - {os: ubuntu-latest, r: 'release', rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
-          - {os: ubuntu-latest, r: '3.6', rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
+          # (at the time of last edit) latest stable version of R for ubuntu-latest (20.04) is 4.1 and 3.6 appears to still be available as well
+          - {os: ubuntu-latest, r: 'release', rspm: "https://packagemanager.rstudio.com/all/latest"}
+          - {os: ubuntu-latest, r: '3.6', rspm: "https://packagemanager.rstudio.com/all/latest"}
 
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
