--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(CH3CCL3_CONSTRAIN)
 export(CH3CL_CONSTRAIN)
 export(CH4_CONSTRAIN)
 export(CO2_CONSTRAIN)
+export(CO3)
 export(CO3_HL)
 export(CO3_LL)
 export(DACCS_UPTAKE)
@@ -57,6 +58,7 @@ export(DELTA_HFC4310)
 export(DELTA_N2O)
 export(DELTA_SF6)
 export(DETRITUS_C)
+export(DIC)
 export(DIC_HL)
 export(DIC_LL)
 export(DIFFUSIVITY)
@@ -145,9 +147,12 @@ export(OCEAN_C_DO)
 export(OCEAN_C_HL)
 export(OCEAN_C_IO)
 export(OCEAN_C_LL)
+export(OCEAN_C_ML)
 export(OCEAN_SURFACE_TEMP)
+export(PCO2)
 export(PCO2_HL)
 export(PCO2_LL)
+export(PH)
 export(PH_HL)
 export(PH_LL)
 export(PREINDUSTRIAL_CH4)
