--- a/inst/input/hector_ssp585.ini
+++ b/inst/input/hector_ssp585.ini
@@ -43,7 +43,7 @@ detritus_c=55			; detritus, Pg C
 soil_c=1782   			; soil, Pg C
 ;boreal.npp_flux0=5.0
 ;tropical.npp_flux0=45.0
-npp_flux0=50.0			; net primary production, Pg C/yr
+npp_flux0=56.2			; net primary production, Pg C/yr, from Ito (2011)
 
 ; Partitioning parameters
 f_nppv=0.35			; Fraction of NPP to vegetation
