--- a/.github/workflows/leeyabot.yml
+++ b/.github/workflows/leeyabot.yml
@@ -40,5 +40,6 @@ jobs:
          cd scripts/
          if [ -f "diff_plot.png" ]; then
           cml-publish "diff_plot.png" --md >> OutputDifferences.knit.md
+          cml-publish "comp_plot.png" --md >> OutputDifferences.knit.md
           fi
          cml-send-comment OutputDifferences.knit.md
