Add ability to constraint Tgav via the R package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -237,6 +237,7 @@ export(SF6_CONSTRAIN)
 export(SOIL_C)
 export(TEMP_HL)
 export(TEMP_LL)
+export(TGAV_CONSTRAIN)
 export(TID)
 export(TRACKING_DATE)
 export(TT)
