--- a/inst/input/hector_ssp585.ini
+++ b/inst/input/hector_ssp585.ini
@@ -159,7 +159,7 @@ qco2=3.75     		; 2×CO2 RF (7.3.2 of IPCC AR6)
 
 ; Optional global temperature constraint
 ; If supplied, the model will use these data, ignoring what it calculates
-; tgav_constrain=csv:tables/CONSTRAINT.csv
+; Tgav_constrain=csv:tables/tgav_historical.csv
 
 ;------------------------------------------------------------------------
 [bc]
