Documentation and INI file updates

--- a/inst/input/hector_ssp245.ini
+++ b/inst/input/hector_ssp245.ini
@@ -62,6 +62,11 @@ luc_emissions=csv:tables/ssp245_emiss-constraints_rf.csv
 ; Any residual between model [CO2] and model [CO2] will be put into the deep ocean
 ;CO2_constrain=csv:tables/ssp245_emiss-constraints_rf.csv	                ;
 
+; Optional net biome production (land-atmosphere C flux) constaint, Pg C/yr
+; Positive = flux to land, negative = flux to atmosphere
+; If supplied, the model will use these data, ignoring what it calculates
+NBP_constrain=csv:tables/nbp_constraint.csv	                ;
+
 ; CO2 and temperature effects on the carbon cycle
 ; these are global values, can optionally specify biome-specific ones as above
 beta=0.36     		; from a optimization best fit
