--- a/NAMESPACE
+++ b/NAMESPACE
@@ -138,6 +138,7 @@ export(N2O_CONSTRAIN)
 export(NATURAL_CH4)
 export(NAT_EMISSIONS_N2O)
 export(NBP)
+export(NBP_CONSTRAIN)
 export(NPP)
 export(NPP_FLUX0)
 export(OCEAN_AIR_TEMP)
