--- a/inst/input/hector_ssp434.ini
+++ b/inst/input/hector_ssp434.ini
@@ -31,9 +31,9 @@ tid=200000000       	; 2.0e8 intermediate-deep exchange, m3/s
 
 ; If using biomes (e.g. boreal.veg_c) must have data for all pools*biomes
 atmos_c=588.071			; Pg C in CO2, from Murakami et al. (2010)
-C0=277.15			; preindustrial CO2 from table 7.SM.1 IPCC AR6 
+C0=277.15			; preindustrial CO2 from table 7.SM.1 IPCC AR6
 ;boreal.veg_c=100		; e.g.
-;tropical.veg_c=450		
+;tropical.veg_c=450
 veg_c=550			; vegetation, Pg C
 ;boreal.detritus_c=15
 ;tropical.detritus_c=45
@@ -60,7 +60,12 @@ luc_emissions=csv:tables/ssp434_emiss-constraints_rf.csv
 ; Optional atmospheric CO2 constraint, ppmv
 ; If supplied, the model will use these data, ignoring what it calculates
 ; Any residual between model [CO2] and model [CO2] will be put into the deep ocean
-;CO2_constrain=csv:tables/ssp434_emiss-constraints_rf.csv	                ; 
+;CO2_constrain=csv:tables/ssp434_emiss-constraints_rf.csv	                ;
+
+; Optional net biome production (land-atmosphere C flux) constaint, Pg C/yr
+; Positive = flux to land, negative = flux to atmosphere
+; If supplied, the model will use these data, ignoring what it calculates
+;NBP_constrain=csv:tables/CONSTRAINT.csv	                ;
 
 ; CO2 and temperature effects on the carbon cycle
 ; these are global values, can optionally specify biome-specific ones as above
@@ -72,7 +77,7 @@ q10_rh=2.0		; respiration response Q10, unitless
 ;boreal.warmingfactor=1.2	; i.e., biome will warm 1.2 C for every 1 C globally
 
 ; Albedo effect, in W/m2. The model assumes a constant value if nothing specified
-Ftalbedo=csv:tables/ssp434_emiss-constraints_rf.csv		; 
+Ftalbedo=csv:tables/ssp434_emiss-constraints_rf.csv		;
 
 ;------------------------------------------------------------------------
 [carbon-cycle-solver]
@@ -118,7 +123,7 @@ NMVOC_emissions=csv:tables/ssp434_emiss-constraints_rf.csv 	; emissions time ser
 [N2O]
 N0=273.87 		; (ppb) preindustrial nitrous oxide from IPCC AR6 table 7.SM.1
 UC_N2O=4.8		; TgN/ppbv unit conversion between emissions and concentrations
-TN2O0=132               ; initial lifetime of N2O, years 
+TN2O0=132               ; initial lifetime of N2O, years
 
 ; An example of setting a time series by individual values
 ; The model will interpolate as necessary between them
@@ -140,9 +145,9 @@ rho_oc=-.00621          ; (W yr m–2 C Tg–1) IPCC AR6 radiative efficiency OC
 rho_so2=-.00000724      ; (W yr m–2 S Gg-1) IPCC AR6 radiative efficiency SO2 (7.SM.1.3.1 of IPCC AR6)
 rho_nh3=-.00208         ; (W yr m–2 NH3Tg–1) IPCC AR6 radiative efficiency NH3 (7.SM.1.3.1 of IPCC AR6)
 
-; Miscellaneous radiative forcings default set to 0, or read in from a input table, may be used to read in 
+; Miscellaneous radiative forcings default set to 0, or read in from a input table, may be used to read in
 ; additional forcings not modeled by Hector (i.e. solar, bc on snow , contrails from)
-Fmisc=csv:tables/ssp434_emiss-constraints_rf.csv		; 
+Fmisc=csv:tables/ssp434_emiss-constraints_rf.csv		;
 
 
 
