--- a/inst/input/hector_ssp245.ini
+++ b/inst/input/hector_ssp245.ini
@@ -65,7 +65,7 @@ luc_emissions=csv:tables/ssp245_emiss-constraints_rf.csv
 ; Optional net biome production (land-atmosphere C flux) constaint, Pg C/yr
 ; Positive = flux to land, negative = flux to atmosphere
 ; If supplied, the model will use these data, ignoring what it calculates
-NBP_constrain=csv:tables/nbp_constraint.csv	                ;
+;NBP_constrain=csv:tables/nbp_constraint.csv	                ;
 
 ; CO2 and temperature effects on the carbon cycle
 ; these are global values, can optionally specify biome-specific ones as above
