--- a/inst/input/hector_ssp245.ini
+++ b/inst/input/hector_ssp245.ini
@@ -94,6 +94,7 @@ Tstrat=120          		; CH4 loss to stratosphere (years)
 UC_CH4=2.78			; Tg(CH4)/ppb unit conversion between emissions and concentrations
 CH4N=341			; best fit
 CH4_emissions=csv:tables/ssp245_emiss-constraints_rf.csv     ; emissions time series
+;CH4_constrain=csv:tables/ssp245_emiss-constraints_rf.csv    ; CH4 concentration constraint
 
 ;------------------------------------------------------------------------
 [OH]
@@ -124,6 +125,7 @@ TN2O0=132               ; initial lifetime of N2O, years
 ; The model will interpolate as necessary between them
 N2O_natural_emissions[1750]=9.5  ; default natural emissions based on a best fit to IPCC AR6 N2O RF
 N2O_emissions=csv:tables/ssp245_emiss-constraints_rf.csv   ; emissions time series
+;N2O_constrain=csv:tables/ssp245_emiss-constraints_rf.csv   ; N2O concentration constraint
 
 ;------------------------------------------------------------------------
 [forcing]
