--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,29 +1,29 @@
 Package: hector
 Title: The Hector Simple Climate Model
 Version: 3.0.0
-Authors@R: c(person("Robert", "Link", 
-            email = "robert.link@pnnl.gov", 
-            role = "aut",
-            comment = c(ORCID = "0000-0002-7071-248X")),
+Authors@R: c(person("Kalyn", "Dorheim", 
+	        email = "kalyn.dorheim@pnnl.gov",
+	        role = c("aut", "cre"),
+	        comment = c(ORCID = "0000-0001-8093-8397")),
+	     person("Ben", "Bond-Lamberty", 
+	        email = "bondlamberty@pnnl.gov", 
+	        role = "aut", 
+	        comment = c(ORCID = "0000-0001-9525-4633")),
 	     person("Corinne", "Hartin", 
 	        email = "hartin.corinne@epa.gov", 
 	        role = "ctb",
 	        comment = c(ORCID = "0000-0003-1834-6539")),
-	     person("Ben", "Bond-Lamberty", 
-	        email = "bondlamberty@pnnl.gov", 
-	        role = "ctb", 
-	        comment = c(ORCID = "0000-0001-9525-4633")),
-	     person("Kalyn", "Dorheim", 
-	        email = "kalyn.dorheim@pnnl.gov",
-	        role = "cre",
-	        comment = c(ORCID = "0000-0001-8093-8397")),
+	     person("Robert", "Link", 
+            email = "robert.link@pnnl.gov", 
+            role = "ctb",
+            comment = c(ORCID = "0000-0002-7071-248X")),
 	     person("Pralit", "Patel", 
 	        email = "pralit.patel@pnnl.gov", 
 	        role = "ctb",
 	        comment = c(ORCID = "0000-0003-3992-1061")),
 	     person("Leeya", "Pressburger", 
 	        email = "leeya.pressburger@pnnl.gov", 
-	        role = "ctb",
+	        role = c("ctb", "dtc"),
 	        comment = c(ORCID = "0000-0002-6850-2504")),
 	     person("Alexey", "Shiklomanov",
 	        email = "alexey.shiklomanov@nasa.gov",
