--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,10 @@ Authors@R: c(person("Kalyn", "Dorheim",
 	        email = "bondlamberty@pnnl.gov", 
 	        role = "aut", 
 	        comment = c(ORCID = "0000-0001-9525-4633")),
+	     person("Skylar", "Gering",
+	        email = "sgering@g.hmc.edu",
+	        role = "ctb",
+	        comment = c(ORCID = "0000-0003-1974-3966")),
 	     person("Corinne", "Hartin", 
 	        email = "hartin.corinne@epa.gov", 
 	        role = "ctb",
