--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,7 +32,11 @@ Authors@R: c(person("Kalyn", "Dorheim",
 	     person("Alexey", "Shiklomanov",
 	        email = "alexey.shiklomanov@nasa.gov",
 	        role = "ctb",
-	        comment = c(ORCID = "0000-0003-4022-5979")))
+	        comment = c(ORCID = "0000-0003-4022-5979")),
+	     person("Dawn", "Woodard",
+	        email = "dawn.woodard@pnnl.gov",
+	        role = "ctb",
+	        comment = c(ORCID = "0000-0002-0468-4660")))
 Description: Provides an R interface for the Hector Simple Climate
     Model. Using this interface you can set up and initialize the model,
     change model parameters and emissions inputs, run Hector, and
