Clarify documeantion and code clean up

--- a/inst/input/hector_ssp434.ini
+++ b/inst/input/hector_ssp434.ini
@@ -94,8 +94,8 @@ SV=csv:tables/ssp434_emiss-constraints_rf.csv   		; volcanic radiative forcing t
 ;------------------------------------------------------------------------
 [CH4]
 M0= 731.41  			; 731.41 ppb preindustrial methane IPCC AR6 Table 7.SM.1, the CH4 forcing equations is calibrated to a M0 of 731.41 ppb
-Tsoil=160 			; CH4 loss to soil (years)
-Tstrat=120          		; CH4 loss to stratosphere (years)
+Tsoil=160 			; lifetime of soil sink (years)
+Tstrat=120          		; lifetime of tropospheric sink (years)
 UC_CH4=2.78			; Tg(CH4)/ppb unit conversion between emissions and concentrations
 CH4N=338			; Natural CH4 emissions (Tgrams)
 CH4_emissions=csv:tables/ssp434_emiss-constraints_rf.csv     ; emissions time series
