Add support in R package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -133,6 +133,7 @@ export(LL_SEVERE)
 export(LL_WARNING)
 export(LO_WARMING_RATIO)
 export(LUC_EMISSIONS)
+export(LUC_UPTAKE)
 export(N2O_CONSTRAIN)
 export(NATURAL_CH4)
 export(NAT_EMISSIONS_N2O)
