--- a/inst/input/hector_ssp585.ini
+++ b/inst/input/hector_ssp585.ini
@@ -56,6 +56,7 @@ f_lucd=0.01			; Fraction of land use change flux from detritus (balance from soi
 ffi_emissions=csv:tables/ssp585_emiss-constraints_rf.csv
 daccs_uptake=csv:tables/ssp585_emiss-constraints_rf.csv
 luc_emissions=csv:tables/ssp585_emiss-constraints_rf.csv
+luc_uptake=csv:tables/ssp585_emiss-constraints_rf.csv
 
 ; Optional atmospheric CO2 constraint, ppmv
 ; If supplied, the model will use these data, ignoring what it calculates
