update non halo RF

--- a/inst/input/hector_ssp370.ini
+++ b/inst/input/hector_ssp370.ini
@@ -78,7 +78,7 @@ q10_rh=2.0		; respiration response Q10, unitless
 ;boreal.warmingfactor=1.2	; i.e., biome will warm 1.2 C for every 1 C globally
 
 ; Albedo effect, in W/m2. The model assumes a constant value if nothing specified
-Ftalbedo=csv:tables/ssp370_emiss-constraints_rf.csv		;
+RF_talbedo=csv:tables/ssp370_emiss-constraints_rf.csv		;
 
 ;------------------------------------------------------------------------
 [carbon-cycle-solver]
@@ -148,8 +148,8 @@ rho_nh3=-.00208         ; (W yr m–2 NH3Tg–1) IPCC AR6 radiative efficiency N
 
 ; Miscellaneous radiative forcings default set to 0, or read in from a input table, may be used to read in
 ; additional forcings not modeled by Hector (i.e. solar, bc on snow , contrails from)
-Fmisc=csv:tables/ssp370_emiss-constraints_rf.csv		;
-
+;RF_misc=csv:tables/ssp370_emiss-constraints_rf.csv		;
+RF_misc[1750]=0	
 
 
 
