updating ocean variable names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -143,13 +143,13 @@ export(NPP)
 export(NPP_FLUX0)
 export(OCEAN_AIR_TEMP)
 export(OCEAN_C)
-export(OCEAN_CFLUX)
 export(OCEAN_C_DO)
 export(OCEAN_C_HL)
 export(OCEAN_C_IO)
 export(OCEAN_C_LL)
 export(OCEAN_C_ML)
 export(OCEAN_SURFACE_TEMP)
+export(OCEAN_UPTAKE)
 export(PCO2)
 export(PCO2_HL)
 export(PCO2_LL)
@@ -236,8 +236,8 @@ export(RHO_SO2)
 export(SETDATA)
 export(SF6_CONSTRAIN)
 export(SOIL_C)
-export(TEMP_HL)
-export(TEMP_LL)
+export(SST_HL)
+export(SST_LL)
 export(TGAV_CONSTRAIN)
 export(TID)
 export(TRACKING_DATE)
