update temp componet output names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,7 +108,7 @@ export(F_LUCV)
 export(F_NPPD)
 export(F_NPPV)
 export(GETDATA)
-export(GLOBAL_TEMP)
+export(GLOBAL_TAS)
 export(HALON1211_CONSTRAIN)
 export(HALON1301_CONSTRAIN)
 export(HALON2402_CONSTRAIN)
@@ -238,7 +238,7 @@ export(SF6_CONSTRAIN)
 export(SOIL_C)
 export(SST_HL)
 export(SST_LL)
-export(TGAV_CONSTRAIN)
+export(TAS_CONSTRAIN)
 export(TID)
 export(TRACKING_DATE)
 export(TT)
