--- a/inst/input/hector_ssp245.ini
+++ b/inst/input/hector_ssp245.ini
@@ -164,7 +164,7 @@ qco2=3.75     		; 2×CO2 RF (7.3.2 of IPCC AR6)
 
 ; Optional global temperature constraint
 ; If supplied, the model will use these data, ignoring what it calculates
-; Tgav_constrain=csv:tables/tgav_historical.csv
+; tas_constrain=csv:tables/tas_historical.csv
 
 ;------------------------------------------------------------------------
 [bc]
