--- a/NAMESPACE
+++ b/NAMESPACE
@@ -124,7 +124,7 @@ export(HFC23_CONSTRAIN)
 export(HFC245FA_CONSTRAIN)
 export(HFC32_CONSTRAIN)
 export(HFC4310_CONSTRAIN)
-export(LAND_AIR_TEMP)
+export(LAND_TAS)
 export(LIFETIME_SOIL)
 export(LIFETIME_STRAT)
 export(LL_DEBUG)
@@ -141,14 +141,13 @@ export(NBP)
 export(NBP_CONSTRAIN)
 export(NPP)
 export(NPP_FLUX0)
-export(OCEAN_AIR_TEMP)
 export(OCEAN_C)
 export(OCEAN_C_DO)
 export(OCEAN_C_HL)
 export(OCEAN_C_IO)
 export(OCEAN_C_LL)
 export(OCEAN_C_ML)
-export(OCEAN_SURFACE_TEMP)
+export(OCEAN_TAS)
 export(OCEAN_UPTAKE)
 export(PCO2)
 export(PCO2_HL)
@@ -236,6 +235,7 @@ export(RHO_SO2)
 export(SETDATA)
 export(SF6_CONSTRAIN)
 export(SOIL_C)
+export(SST)
 export(SST_HL)
 export(SST_LL)
 export(TAS_CONSTRAIN)
