drop the mystery t from albedo

--- a/inst/input/hector_ssp126.ini
+++ b/inst/input/hector_ssp126.ini
@@ -78,7 +78,7 @@ q10_rh=2.0		; respiration response Q10, unitless
 ;boreal.warmingfactor=1.2	; i.e., biome will warm 1.2 C for every 1 C globally
 
 ; Albedo effect, in W/m2. The model assumes a constant value if nothing specified
-RF_talbedo=csv:tables/ssp126_emiss-constraints_rf.csv		;
+RF_albedo=csv:tables/ssp126_emiss-constraints_rf.csv		;
 
 ;------------------------------------------------------------------------
 [carbon-cycle-solver]
