--- a/inst/input/hector_ssp434.ini
+++ b/inst/input/hector_ssp434.ini
@@ -138,7 +138,7 @@ baseyear=1750		; when to start reporting; by definition, all F=0 in this year
 
 ; Optional radiative forcing constraint
 ; If supplied, the model will use these data, ignoring what it calculates
-;Ftot_constrain=csv:tables/CONSTRAINT.csv
+;RF_tot_constrain=csv:tables/CONSTRAINT.csv
 delta_co2=0.05		; (unitless) forcing tropospheric adjustments for CO2 (7.3.2.1 of IPCC AR6)
 delta_ch4=-.14		; (unitless) forcing tropospheric adjustments for CH4 (7.3.2.2 of IPCC AR6)
 delta_n2o=0.07		; (unitless) forcing tropospheric adjustments for N2O (7.3.2.3 of IPCC AR6)
