--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,6 @@ S3method(print,hcore)
 export(AERO_SCALE)
 export(ATMOSPHERIC_C)
 export(ATMOSPHERIC_CH4)
-export(ATMOSPHERIC_CO2)
 export(ATMOSPHERIC_N2O)
 export(ATMOSPHERIC_O3)
 export(ATM_OCEAN_FLUX_HL)
@@ -27,6 +26,7 @@ export(CO2_CONSTRAIN)
 export(CO3)
 export(CO3_HL)
 export(CO3_LL)
+export(CONCENTRATIONS_CO2)
 export(DACCS_UPTAKE)
 export(DELTA_C2F6)
 export(DELTA_CCL4)
