update atmos c to co2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,8 @@
 S3method(format,hcore)
 S3method(print,hcore)
 export(AERO_SCALE)
-export(ATMOSPHERIC_C)
 export(ATMOSPHERIC_CH4)
+export(ATMOSPHERIC_CO2)
 export(ATMOSPHERIC_N2O)
 export(ATMOSPHERIC_O3)
 export(ATM_OCEAN_FLUX_HL)
