--- a/inst/input/hector_ssp119.ini
+++ b/inst/input/hector_ssp119.ini
@@ -30,7 +30,7 @@ tid=200000000       	; 2.0e8 intermediate-deep exchange, m3/s
 ; 10.1029/2006GB002908; Murakami 2010, 10.1007/s00704-009-0232-8) values.
 
 ; If using biomes (e.g. boreal.veg_c) must have data for all pools*biomes
-atmos_c=588.071			; Pg C in CO2, from Murakami et al. (2010)
+atmos_co2=588.071			; Pg C in CO2, from Murakami et al. (2010)
 C0=277.15			; preindustrial CO2 from table 7.SM.1 IPCC AR6
 ;boreal.veg_c=100		; e.g.
 ;tropical.veg_c=450
