rename CH4 and N2O conc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,7 @@
 S3method(format,hcore)
 S3method(print,hcore)
 export(AERO_SCALE)
-export(ATMOSPHERIC_CH4)
 export(ATMOSPHERIC_CO2)
-export(ATMOSPHERIC_N2O)
 export(ATMOSPHERIC_O3)
 export(ATM_OCEAN_FLUX_HL)
 export(ATM_OCEAN_FLUX_LL)
@@ -26,7 +24,9 @@ export(CO2_CONSTRAIN)
 export(CO3)
 export(CO3_HL)
 export(CO3_LL)
+export(CONCENTRATIONS_CH4)
 export(CONCENTRATIONS_CO2)
+export(CONCENTRATIONS_N2O)
 export(DACCS_UPTAKE)
 export(DELTA_C2F6)
 export(DELTA_CCL4)
