Updating output names 1
update the output names for 
* concentrations 
* ocean variable names 
* temp names 
* forcing names

--- a/inst/input/hector_ssp585.ini
+++ b/inst/input/hector_ssp585.ini
@@ -30,7 +30,7 @@ tid=200000000       	; 2.0e8 intermediate-deep exchange, m3/s
 ; 10.1029/2006GB002908; Murakami 2010, 10.1007/s00704-009-0232-8) values.
 
 ; If using biomes (e.g. boreal.veg_c) must have data for all pools*biomes
-atmos_c=588.071			; Pg C in CO2, from Murakami et al. (2010)
+atmos_co2=588.071			; Pg C in CO2, from Murakami et al. (2010)
 C0=277.15			; preindustrial CO2 from table 7.SM.1 IPCC AR6
 ;boreal.veg_c=100		; e.g.
 ;tropical.veg_c=450
@@ -78,7 +78,7 @@ q10_rh=2.0		; respiration response Q10, unitless
 ;boreal.warmingfactor=1.2	; i.e., biome will warm 1.2 C for every 1 C globally
 
 ; Albedo effect, in W/m2. The model assumes a constant value if nothing specified
-Ftalbedo=csv:tables/ssp585_emiss-constraints_rf.csv		;
+RF_albedo=csv:tables/ssp585_emiss-constraints_rf.csv		;
 
 ;------------------------------------------------------------------------
 [carbon-cycle-solver]
@@ -137,7 +137,7 @@ baseyear=1750		; when to start reporting; by definition, all F=0 in this year
 
 ; Optional radiative forcing constraint
 ; If supplied, the model will use these data, ignoring what it calculates
-;Ftot_constrain=csv:tables/CONSTRAINT.csv
+;RF_tot_constrain=csv:tables/CONSTRAINT.csv
 delta_co2=0.05		; (unitless) forcing tropospheric adjustments for CO2 (7.3.2.1 of IPCC AR6)
 delta_ch4=-.14		; (unitless) forcing tropospheric adjustments for CH4 (7.3.2.2 of IPCC AR6)
 delta_n2o=0.07		; (unitless) forcing tropospheric adjustments for N2O (7.3.2.3 of IPCC AR6)
@@ -148,8 +148,8 @@ rho_nh3=-.00208         ; (W yr m–2 NH3Tg–1) IPCC AR6 radiative efficiency N
 
 ; Miscellaneous radiative forcings default set to 0, or read in from a input table, may be used to read in
 ; additional forcings not modeled by Hector (i.e. solar, bc on snow , contrails from)
-Fmisc=csv:tables/ssp585_emiss-constraints_rf.csv		;
-
+;RF_misc=csv:tables/ssp585_emiss-constraints_rf.csv		;
+RF_misc[1750]=0	
 
 
 
@@ -165,7 +165,7 @@ qco2=3.75     		; 2×CO2 RF (7.3.2 of IPCC AR6)
 
 ; Optional global temperature constraint
 ; If supplied, the model will use these data, ignoring what it calculates
-; Tgav_constrain=csv:tables/tgav_historical.csv
+; tas_constrain=csv:tables/tas_historical.csv
 
 ;------------------------------------------------------------------------
 [bc]
