--- a/inst/input/hector_ssp245.ini
+++ b/inst/input/hector_ssp245.ini
@@ -60,7 +60,7 @@ luc_uptake=csv:tables/ssp245_emiss-constraints_rf.csv
 ;CO2_constrain=csv:tables/ssp245_emiss-constraints_rf.csv	                ;
 
 ; Optional net biome production (land-atmosphere C flux) constaint, Pg C/yr
-; Positive = flux to land, negative = flux to atmosphere
+; Positive represents flux to land, negative represents flux to atmosphere
 ; If supplied, the model will use these data, ignoring what it calculates
 ;NBP_constrain=csv:tables/nbp_constraint.csv	                ;
 
