--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -105,6 +105,7 @@ reference:
   - methane
   - ocean
   - temperature
+  - input_csv
 
 # Organize the articles index, set it up so that all of the vignettes are listed.
 articles:
