--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -71,3 +71,4 @@ RoxygenNote: 7.1.2
 SystemRequirements: GNU make
 URL: https://github.com/JGCRI/hector
 BugReports: https://github.com/JGCRI/hector/issues
+Language: en-US
