CRAN prep & pkgdown update   (#589)
* Start making working on CRAn requirements 
* Pkgdown documentation update and reorg 

Co-authored-by: Ben Bond-Lamberty <bondlamberty@pnnl.gov>
Co-authored-by: leeyap <leeya.pressburger@pnnl.gov>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -100,6 +100,7 @@ export(EMISSIONS_SO2)
 export(FFI_EMISSIONS)
 export(FLUX_INTERIOR)
 export(FLUX_MIXED)
+export(FTOT_CONSTRAIN)
 export(F_LITTERD)
 export(F_LUCD)
 export(F_LUCV)
