--- a/inst/input/hector_ssp585.ini
+++ b/inst/input/hector_ssp585.ini
@@ -18,10 +18,6 @@ tu=49000000         	; 4.9e7 high latitude overturning, m3/s
 twi=12500000        	; 1.25e7 warm-intermediate exchange, m3/s
 tid=200000000       	; 2.0e8 intermediate-deep exchange, m3/s
 
-; Optional ocean C uptake constraint, Pg C/yr
-; If supplied, the model will use these data, ignoring what it calculates
-;atm_ocean_constrain=csv:tables/CONSTRAINT.csv
-
 ;------------------------------------------------------------------------
 [simpleNbox]
 ; Initial (preindustrial) carbon pools and fluxes
@@ -64,7 +60,7 @@ luc_uptake=csv:tables/ssp585_emiss-constraints_rf.csv
 ;CO2_constrain=csv:tables/ssp585_emiss-constraints_rf.csv	                ;
 
 ; Optional net biome production (land-atmosphere C flux) constaint, Pg C/yr
-; Positive = flux to land, negative = flux to atmosphere
+; Positive represents flux to land, negative represents flux to atmosphere
 ; If supplied, the model will use these data, ignoring what it calculates
 ;NBP_constrain=csv:tables/CONSTRAINT.csv	                ;
 
@@ -100,6 +96,7 @@ Tstrat=120          		; lifetime of tropospheric sink (years)
 UC_CH4=2.78			; Tg(CH4)/ppb unit conversion between emissions and concentrations
 CH4N=338			; Natural CH4 emissions (Tgrams)
 CH4_emissions=csv:tables/ssp585_emiss-constraints_rf.csv     ; emissions time series
+;CH4_constrain=csv:tables/ssp585_emiss-constraints_rf.csv    ; CH4 concentration constraint
 
 ;------------------------------------------------------------------------
 [OH]
@@ -130,6 +127,7 @@ TN2O0=132               ; initial lifetime of N2O, years
 ; The model will interpolate as necessary between them
 N2O_natural_emissions[1750]=9.7  ; default natural emissions based on a best fit to IPCC AR6 N2O RF
 N2O_emissions=csv:tables/ssp585_emiss-constraints_rf.csv   ; emissions time series
+;N2O_constrain=csv:tables/ssp585_emiss-constraints_rf.csv   ; N2O concentration constraint
 
 ;------------------------------------------------------------------------
 [forcing]
