add ppl who contributed to v1-3

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,6 +21,9 @@ Authors@R: c(person("Kalyn", "Dorheim",
             email = "robert.link@pnnl.gov", 
             role = "ctb",
             comment = c(ORCID = "0000-0002-7071-248X")),
+        person("Nicholson", "Mat", 
+            role = "ctb",
+            comment = c(github = "mnichol3")),
 	     person("Pralit", "Patel", 
 	        email = "pralit.patel@pnnl.gov", 
 	        role = "ctb",
@@ -33,6 +36,9 @@ Authors@R: c(person("Kalyn", "Dorheim",
 	        email = "alexey.shiklomanov@nasa.gov",
 	        role = "ctb",
 	        comment = c(ORCID = "0000-0003-4022-5979")),
+	   	 person("Benjamin", "Vega-Westhoff",
+	        role = "ctb",
+	        comment = c(ORCID = "0000-0001-7881-8388")),
 	     person("Dawn", "Woodard",
 	        email = "dawn.woodard@pnnl.gov",
 	        role = "ctb",
