Update Actions settings for new v3 branch name

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -3,7 +3,7 @@ on:
     branches:
       - main
       - master
-      - land_tracking
+      - v3_dev
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
