--- a/.github/workflows/command-line.yaml
+++ b/.github/workflows/command-line.yaml
@@ -12,8 +12,7 @@ on:
   pull_request:
     branches:
       - master
-      - land_tracking
-      - tracking-vars
+      - v3_dev
 
   schedule:
     # * is a special character in YAML so you have to quote this string
