--- a/.github/workflows/unit-testing.yaml
+++ b/.github/workflows/unit-testing.yaml
@@ -7,7 +7,7 @@ on:
   pull_request:
     branches:
       - master
-      - land_tracking
+      - v3_dev
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
