--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,3 +1,9 @@
+template:
+  params:
+    docsearch:
+      api_key: b2aa343d0c9e9ed33c9582908f3acaf8
+      index_name: hector
+url: https://jgcri.github.io/hector/
 navbar:
   type: default
   left:
