--- a/inst/input/hector_ssp434.ini
+++ b/inst/input/hector_ssp434.ini
@@ -25,7 +25,11 @@ tid=200000000       	; 2.0e8 intermediate-deep exchange, m3/s
 ; 1987, 10.1111/j.1600-0889.1987.tb00278.x) and modeled (e.g. Ricciuto 2008,
 ; 10.1029/2006GB002908; Murakami 2010, 10.1007/s00704-009-0232-8) values.
 
-; If using biomes (e.g. boreal.veg_c) must have data for all pools*biomes
+; If using biomes (e.g. boreal.veg_c), this file must have entries for
+; - all carbon pools
+; - the nppv, nppd, and litterd partitioning parameters
+; - beta and q10_rh
+
 atmos_co2=588.071			; Pg C in CO2, from Murakami et al. (2010)
 C0=277.15			; preindustrial CO2 from table 7.SM.1 IPCC AR6
 ;boreal.veg_c=100		; e.g.
