Fix biome split code, improve logging, code cleanup, fix lintr test (#627)

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -16,6 +16,8 @@ jobs:
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
+      - name: apt update
+        run: sudo apt-get update
       - name: Install libcurl
         run: sudo apt-get install libcurl4-openssl-dev
 
