--- a/inst/input/hector_ssp434.ini
+++ b/inst/input/hector_ssp434.ini
@@ -25,7 +25,11 @@ tid=200000000       	; 2.0e8 intermediate-deep exchange, m3/s
 ; 1987, 10.1111/j.1600-0889.1987.tb00278.x) and modeled (e.g. Ricciuto 2008,
 ; 10.1029/2006GB002908; Murakami 2010, 10.1007/s00704-009-0232-8) values.
 
-; If using biomes (e.g. boreal.veg_c) must have data for all pools*biomes
+; If using biomes (e.g. boreal.veg_c), this file must have entries for
+; - all carbon pools
+; - the nppv, nppd, and litterd partitioning parameters
+; - beta and q10_rh
+
 atmos_co2=588.071			; Pg C in CO2, from Murakami et al. (2010)
 C0=277.15			; preindustrial CO2 from table 7.SM.1 IPCC AR6
 ;boreal.veg_c=100		; e.g.
@@ -75,7 +79,6 @@ q10_rh=2.0		; respiration response Q10, unitless
 
 ; Albedo effect, in W/m2. The model assumes a constant value if nothing specified
 RF_albedo=csv:tables/ssp434_emiss-constraints_rf.csv		;
-
 
 ;------------------------------------------------------------------------
 [carbon-cycle-solver]
@@ -149,7 +152,6 @@ rho_nh3=-.00208         ; (W yr m–2 NH3Tg–1) IPCC AR6 radiative efficiency N
 ; additional forcings not modeled by Hector (i.e. solar, bc on snow , contrails from)
 ;RF_misc=csv:tables/ssp434_emiss-constraints_rf.csv		;
 RF_misc[1750]=0	
-
 
 
 ;------------------------------------------------------------------------
