--- a/.github/workflows/command-line.yaml
+++ b/.github/workflows/command-line.yaml
@@ -13,6 +13,7 @@ on:
     branches:
       - master
       - v3_dev
+      - update_ini
 
   schedule:
     # * is a special character in YAML so you have to quote this string
@@ -35,6 +36,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: build and run
         run: |
+          sudo apt-get update
           sudo apt install libboost-dev
           make hector
           bash ./test_hector.sh ./src/hector
