Fix incorrect NBP_constrain settings in the INI files
Looks like this was messed up in 966c1bce

--- a/inst/input/hector_ssp460.ini
+++ b/inst/input/hector_ssp460.ini
@@ -66,7 +66,7 @@ luc_uptake=csv:tables/ssp460_emiss-constraints_rf.csv
 ; Optional net biome production (land-atmosphere C flux) constaint, Pg C/yr
 ; Positive represents flux to land, negative represents flux to atmosphere
 ; If supplied, the model will use these data, ignoring what it calculates
-;NBP_constrain=csv:tables/CONSTRAINT.csv	                ;
+;NBP_constrain=csv:tables/nbp_constraint.csv	                ;
 
 ; CO2 and temperature effects on the carbon cycle
 ; these are global values, can optionally specify biome-specific ones as above
@@ -152,7 +152,7 @@ rho_nh3=-.00208         ; (W yr m–2 NH3Tg–1) IPCC AR6 radiative efficiency N
 ; additional forcings not modeled by Hector (i.e. solar, bc on snow , contrails from)
 ;RF_misc=csv:tables/ssp460_emiss-constraints_rf.csv		;
 RF_misc[1750]=0
-    
+
 
 
 ;------------------------------------------------------------------------
