Fix incorrect NBP_constrain setting in the INI files (#631)
* Update command-line.yaml
* Quiet make clean
* Update .gitignore
* Fix incorrect NBP_constrain settings in the INI files - this was messed up in 966c1bce
* Update GitHub Actions yamls for branch selection

--- a/.github/workflows/command-line.yaml
+++ b/.github/workflows/command-line.yaml
@@ -11,8 +11,7 @@ on:
       - github_actions
   pull_request:
     branches:
-      - master
-      - v3_dev
+      - '**' # matches every branch
 
   schedule:
     # * is a special character in YAML so you have to quote this string
@@ -35,6 +34,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: build and run
         run: |
+          sudo apt-get update
           sudo apt install libboost-dev
           make hector
           bash ./test_hector.sh ./src/hector
