Fix NBP constraint file used by test

--- a/inst/input/hector_ssp245.ini
+++ b/inst/input/hector_ssp245.ini
@@ -66,7 +66,7 @@ luc_uptake=csv:tables/ssp245_emiss-constraints_rf.csv
 ; Optional net biome production (land-atmosphere C flux) constaint, Pg C/yr
 ; Positive represents flux to land, negative represents flux to atmosphere
 ; If supplied, the model will use these data, ignoring what it calculates
-NBP_constrain=csv:tables/nbp_constant.csv	                ;
+;NBP_constrain=csv:tables/nbp_output.csv	                ;
 
 ; CO2 and temperature effects on the carbon cycle
 ; these are global values, can optionally specify biome-specific ones as above
