--- a/NAMESPACE
+++ b/NAMESPACE
@@ -159,6 +159,7 @@ export(PREINDUSTRIAL_O3)
 export(Q10_RH)
 export(Q_CO2)
 export(RF_ACI)
+export(RF_ALBEDO)
 export(RF_BC)
 export(RF_C2F6)
 export(RF_CCL4)
@@ -196,7 +197,6 @@ export(RF_OC)
 export(RF_SF6)
 export(RF_SO2)
 export(RF_TOTAL)
-export(RF_T_ALBEDO)
 export(RF_VOL)
 export(RH)
 export(RHO_BC)
