R code upgrades for permafrost
Original commit: c0aebeffbd6434733f6892e8b5d9e3a927a5fe22

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -149,6 +149,7 @@ export(OCEAN_UPTAKE)
 export(PCO2)
 export(PCO2_HL)
 export(PCO2_LL)
+export(PERMAFROST_C)
 export(PH)
 export(PH_HL)
 export(PH_LL)
