--- a/inst/input/hector_ssp119.ini
+++ b/inst/input/hector_ssp119.ini
@@ -43,6 +43,7 @@ detritus_c=55			; detritus, Pg C
 soil_c=1782   			; soil, Pg C
 ;boreal.npp_flux0=5.0
 ;tropical.npp_flux0=45.0
+permafrost_c=0			; permafrost, Pg C
 npp_flux0=55.9			; net primary production, Pg C/yr, (calibrated to historical observations)
 
 ; Partitioning parameters
