Add the look up function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -251,6 +251,7 @@ export(get_biome_list)
 export(get_tracking_data)
 export(get_tracking_data_impl)
 export(getdate)
+export(getfxn)
 export(getname)
 export(getunits)
 export(isactive)
