--- a/.github/workflows/leeyabot.yml
+++ b/.github/workflows/leeyabot.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: iterative/setup-cml@v1
+	with:
+	 version: '1.0.1'
       - uses: r-lib/actions/setup-r@v2
         with:
           r-version: 'release'
